# Client_Socket

./: .gitignore  CMakeLists.txt
inc/: fileTransferClient.hh  socketConnection.hh  stackList.hh
src/: fileTransferClient.cpp  main.cpp  socketConnection.cpp  stackList.cpp
tests/: test1.cpp
tests/inc/: socketConnection.hh  stackList.hh  stackNode.hh
tests/src/: main.cpp
tests/tests_data/: test1_data.txt
